XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Made util.Locale fully qualified, to make XP forward compatible
  with PHP 5.3.0 with ext/intl enabled
  (kiesel)
- Changed "unittest" command to exit with non-zero exitcode if either no
  tests are found or any test fails
  (friebe)
- Changed ClassDoc::sourceFile() and PackageDoc::sourceFile() in 
  text.doclet to return io.File objects instead of strings
  (friebe)
- Refactored scriptlet.workflow.casters.ToValidXMLString into the
  checker scriptlet.workflow.checkers.WellformedXMLChecker
  (kiesel)

Features
~~~~~~~~
- Added optional parameter "file" to xp::gc() which will only clean up
  errors caused inside the given file (versus all errors)
  (friebe, kiesel)
- Added memory reporting methods to lang.Runtime class
  (friebe)
- Made timeouts during socket reads detectable by specialized exception
  peer.SocketTimeoutException
  http://news.xp-framework.net/article/308/2009/08/11
  (friebe, Rene Patzer)
- Added Console input stream (Console::$in)
  (friebe)
- Added lang.Runtime::bootstrapScript() method which returns the boot-
  strap script (e.g. "tools/class.php" or "tools/xar.php")
  (friebe)
- Added lang.Runtime::mainClass() method which returns the entry point
  class (e.g. "tools.unittest.Runner")
  (friebe)
- Added lang.Runtime::startupOptions() method which returns the options
  given to the runtime on the command line (e.g. "-dinclude_path=...", 
  "-q" or "-denable_dl=Off")
  (friebe)
- Added lang.Process::getArguments() which returns command line arguments
  passed to the process as an array of strings.
  (friebe)
- Support data type "varbinary" in MySQLDBAdapter class
  (hinckel)
- Made XML_ILLEGAL_CHARS a xml.Node class constant
  (kiesel)
- Added accessors for underlying output stream to io.streams.StringWriter